@startuml connect4.connect4.console.console


class StartController as "controllers.core\n.StartController"
class PlayController as "controllers.core\n.PlayController"
class ResumeController as "controllers.core\n.ResumeController"
class SaveController as "controllers.core\n.SaveController"
class StartView as "connect4.views.\nconsole.start.StartView"
class PlayView as "connect4.views.\nconsole.play.PlayView"
interface View as "connect4.views.View"
class Console as "utils.views.Console"
class YesNoDialog as "utils.views.YesNoDialog"
enum Message as "connect4.views.console.\nshared.Message"

package console as "connect4.views.console"{
    
}

class console.ResumeView{
    + interact(ResumeController)
}

class console.Consoleview {
    + start(StartController)
    + play(Playcoontroller)
    + resume(ResumeController)
    + visit(StartController)
    + visit(PlayController)
    + visit(SaveController)
    + visit(ResumeController)
}

class console.SaveView {
    + interact(SaveController)
    - askName() : String
}

View <|.. Consoleview 
Consoleview *--> StartView
Consoleview *--> PlayView
Consoleview *--> ResumeView
Consoleview *--> SaveView
Consoleview ..> StartController
Consoleview ..> PlayController
Consoleview ..> ResumeController
Consoleview ..> SaveController
ResumeView ..> ResumeController
ResumeView ..> YesNoDialog
ResumeView ..> Message
SaveView ..> Message
SaveView ..> Console
SaveView ..> YesNoDialog
SaveView ..> SaveController

@enduml